--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-notification-channels/discord": "^1.6",
+        "laravel-notification-channels/telegram": "^5.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
